egonlang-core/res/examples/invalid/let_decl_with_no_identifier.eg
let;

// out: SyntaxError: unexpected ";"; expected: ["identifier"]